<resources>
    <string name="datetime_db_format" translatable="false">yyyy-MM-dd HH:mm:ss</string>
    <string name="date_db_format" translatable="false">yyyy-MM-dd</string>
    <string name="api_token" translatable="false">2241626F6C66617A6C416C697A616465683132333422</string>
    <!--    <string name="api_address" translatable="false">http://10.0.2.2/OurSchool/api/</string>-->
    <string name="api_address" translatable="false">https://our-school.abolfazlalz.ir/api/</string>

    <string name="title_activity_register" translatable="false">RegisterActivity</string>
    <string name="staring_form_header">Welcome to our School</string>
    <string name="app_name">Our School</string>
    <string name="starting_form_text">Software for the large student community. Curriculum with various warnings. Associations of questions and lessons for all grades and high school majors. Welcome to the new world of education</string>
    <string name="login_text">Login</string>
    <string name="signup_text">Sign up</string>
    <string name="login_fragment_label">Login</string>
    <string name="create_account_phone_fragment_label">Signup</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login_header_text">Let\'s go to school again</string>
    <string name="login_information_text">Get back to school using your user information</string>
    <string name="signup_btn">Sign up</string>
    <string name="username_field_login">Username or Phone Number</string>
    <string name="password_hint">Password</string>
    <string name="create_account_header">Experience going to Online school with us</string>
    <string name="create_account_information_text">Please enter your phone number to start the registration process</string>
    <string name="mobile_phone_number">Phone Number</string>
    <string name="confirm_phone_header">Confirm Phone Number</string>
    <string name="confirm_information_text">A code containing the phone number verification code will be sent to you, please enter it</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="edit_phone_number">Edit Phone Number</string>
    <string name="phone_number_field_empty">Please enter the Phone number continue</string>
    <string name="incorrect_phone_number">The phone number entered is incorrect</string>
    <string name="school_bus">School bus</string>
    <string name="phone_number_taken">the Phone number are taken</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="incorrect_code">Incorrect confirmation code</string>
    <string name="out_of_date_code">This code has become obsolete</string>
    <string name="resend_code">"To Resent code: "</string>
    <string name="new_resent_code">Request new code</string>
    <string name="set_password_header">Set Password</string>
    <string name="set_password_information">Please choose a password for your next visit and try not to forget it.</string>
    <string name="set_password_hint">The password must be at least 8 letters long, and it is best to include capital letters and numbers</string>
    <string name="password_length_error">The password must be at least 8 letters long</string>
    <string name="cs_information_header">Complete personal information</string>
    <string name="unable_to_open_picture">unable to open the image</string>
    <string name="error_resend_code">Unexpected error in sending new confirmation code</string>
    <string name="volley_auth_error">Error identifying server</string>
    <string name="volley_client_error">Server error, please let us know</string>
    <string name="volley_network_error">Problems connecting to the server, please check your internet connection</string>
    <string name="volley_no_connection_error">You are not connected to the Internet, please first enable to continue your internet connection</string>
    <string name="volley_parse_error">The server sent incorrect information, please report</string>
    <string name="volley_server_error">The target server was not found</string>
    <string name="volley_timeout_error">Server timeout</string>
    <string name="not_match_password">The passwords entered do not match</string>
    <string name="double_click_to_exit">Click to return</string>
    <string name="cs_information_information">Welcome my friend, please let us know more</string>
    <string name="change_password_btn">Change password</string>
    <string name="first_name_field_hint">Name</string>
    <string name="last_name_field_hint">Last Name</string>
    <string name="birthday_button_picker">Date Birthday</string>
    <string name="your_birthday">Your birthday date</string>
    <string name="gender_label_text">Gender:</string>
    <string name="gender_male_text">Male</string>
    <string name="gender_female">Female</string>
    <string name="job_field_label">Your job at school</string>
    <string name="job_student">Student</string>
    <string name="job_teacher">Teacher</string>
    <string name="state_spinner">State</string>
    <string name="city_spinner">City</string>
    <string name="school_spinner">School</string>
    <string name="class_spinner">Class</string>
    <string name="privacy_signup_school">Your request will be sent to the selected school administration, and after confirmation of management, you can use the class facilities</string>
    <string name="done_btn">Done</string>
    <string name="choice_student_school">Choice School</string>
    <string name="not_found_school">There is no school in the city</string>
    <string name="not_found_classes">No class is registered for this school</string>
    <string name="please_wait">Please wait</string>
    <string name="please_wait_information">Our bus is taking you to school</string>
    <string name="username_hint">Username</string>
    <string name="fill_birthday">Please enter your date birthday</string>
    <string name="enter_username">Enter your username</string>
    <string name="empty_first_name_field">Enter your first name</string>
    <string name="empty_last_name_field">Enter your last name</string>
    <string name="forums_page">Forums</string>
    <string name="library_page">Library</string>
    <string name="user_page">User</string>
    <string name="home_page">Home</string>
    <string name="welcome_message">Welcome</string>
    <string name="start_study_text">Start Study</string>
    <string name="days_ago">%d days ago</string>
    <string name="show_study_schedule">"Study schedules history "</string>
    <string name="more_button_text">More</string>
    <string name="today_text">Today</string>
    <string name="duration_minutes">%d minutes</string>
    <string name="duration_hours_minutes">%d Hours %d minutes</string>
    <string name="duration_hours">%d Hours</string>
    <string name="start_now">Let\'s start now</string>
    <string name="today_class">Today\'s classes</string>
    <string name="no_study_history_text">Dear %s, you have not yet registered your study period in this data software</string>
    <string name="show_weekly">View a weekly class schedule</string>
    <string name="class_icon">class-icon</string>
    <string name="book_image">Book-Image</string>
    <string name="internet_not_connected">Please connect your internet connection</string>
    <string name="duration_class">From %s to %s hours</string>
    <string name="no_class_today">You have no classes today</string>
    <string name="no_forums">no any question asked</string>
    <string name="show_forums">Show all questions</string>
    <string name="last_questions_forums">Recent questions from students</string>
    <string name="study_history">Study History</string>
    <string name="end_study_text">End of study</string>
    <string name="study_save_data_message">Good Job ! your information has saved</string>
    <string name="already_study">You are study</string>
    <string name="delete_from_history">Remove from history</string>
    <string name="less_than_minute">Less than 1 minute</string>
    <string name="add_question">New Question</string>
    <string name="study_now_text">Starting now</string>
    <string name="add_question_information">My friend, you can ask your question here and we will show it to all the students</string>
    <string name="question_title_text">Question title</string>
    <string name="question_text">Question text</string>
    <string name="add_question_success">Your question was successfully added</string>
    <string name="title_activity_about_us">About us</string>
    <string name="large_text"><b> Software Designers: </b> <u> Abolfazl Alizadeh Sarshouri </u> Programmer, Designer and Software Developer <u> Masoud Lotfian </u> Designer and Graphic Designer <b> Purpose of Software Development : </b> This software is designed to create more and easier communication for students. <a href="https://abolfazlalz.ir"> سایت ابوالفضل علیزاده </a></string>
    <string name="action_settings">Settings</string>
    <string name="select_school_hint">This software is a test version and there is a school only in Semnan province, Shahroud city</string>
    <string name="sign_out">Log out</string>
    <string name="total_study_time">Total study time:</string>
    <string name="no_study_record">Information not available</string>
    <string name="last_month_study_duration">Total study time in the last month:</string>
    <string name="no_attached_file">You have not attached any files</string>
    <string name="add_attachment_btn">Add attachment</string>
    <string name="attachment">Attachment</string>
    <string name="upload_photo_error">Unable to upload the photo</string>
    <string name="no_answer" >No any answer exists for this question</string>
    <string name="you_first_person">"You can first person answer to this question "</string>
</resources>
