<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.futech.our_school.ui.home.HomeFragment"
        android:label="@string/home_page"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_forums"
        android:name="com.futech.our_school.ui.forums.ForumsFragment"
        android:label="@string/forums_page"
        tools:layout="@layout/fragment_forums" />

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.futech.our_school.ui.library.LibraryFragment"
        android:label="@string/library_page"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.futech.our_school.ui.user.UserFragment"
        android:label="@string/user_page"
        tools:layout="@layout/fragment_user" />
</navigation>