<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/RegisterPadding">


    <TextView
        android:id="@+id/headerImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/RegisterField.Header"
        android:text="@string/set_password_header"/>

    <TextView
        android:id="@+id/informationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/headerImage"
        android:text="@string/set_password_information"
        style="@style/RegisterField.Information"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_text"
        style="@style/Register.Field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/register_field"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/informationText"
        android:drawableRight="@drawable/ic_password"
        tools:ignore="RtlHardcoded" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_confirm_text"
        style="@style/Register.Field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/register_field"
        android:drawableRight="@drawable/ic_password"
        tools:ignore="RtlHardcoded"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        app:layout_constraintTop_toBottomOf="@id/password_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/set_password_hint"
        app:layout_constraintBottom_toTopOf="@+id/next_btn"
        app:layout_constraintTop_toBottomOf="@id/password_confirm_text"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/changePhoneNumber"
        android:text="@string/next"
        android:background="@color/colorPrimary"
        style="@style/Register.Field.PrimaryButton"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changePhoneNumber"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/colorPrimary"
        android:text="@string/edit_phone_number"/>

</androidx.constraintlayout.widget.ConstraintLayout>