<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/RegisterPadding"
    tools:context=".activities.register.LoginFragment">

    <TextView
        android:id="@+id/headerText"
        style="@style/RegisterField.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_header_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/informationText"
        style="@style/RegisterField.Information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_information_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerText" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:hint="@string/username_field_login"
        android:inputType="text"
        android:layout_marginTop="50dp"
        style="@style/Register.Field"
        android:background="@drawable/register_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/informationText"
        android:gravity="left"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:hint="@string/password_hint"
        style="@style/Register.Field"
        android:background="@drawable/register_field"
        android:drawableRight="@drawable/ic_password"
        tools:ignore="RtlHardcoded"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        app:layout_constraintTop_toBottomOf="@id/edit_username" />

    <Button
        android:id="@+id/login_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/login_text"
        app:layout_constraintBottom_toTopOf="@id/signupBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signupBtn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_text"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
